rules/ensure_network_policy_configured_in_labels/test/failed_pod_no_matched_label/input/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-pod-network-policy
spec:
  podSelector:
    matchLabels:
      app: my-pod1
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
