rules/ensure_network_policy_configured_in_labels/test/failed_pod_no_matched_label/input/network_policy2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-pod-network-policy2
  namespace: my-namespace
spec:
  podSelector:
    matchLabels:
      app: my-pod
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
