rules/ensure_network_policy_configured_in_labels/test/failed_pod_no_matched_label/input/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: my-pod
spec:
  containers:
  - name: my-app
    image: my-app:1.0.0
